<resources>
    <string name="app_name">Task Master</string>
    <string name="image_contentDescription">Image</string>
    <string name="let_s_get_started_text">Let\'s Get Started</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="intro_text_description">Collaborate And Plan Together Across Multiple Devices On Task Master\'s Minimalist Interface.</string>
    <string name="sign_up_description_text">Enter Your Name, Email, Password And Join Our Community</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_description_text">Enter Your Details To Sign In Into Our Task Master\'s Minimalist Interface</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <!-- Sign Up Activity   -->

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>

    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile_title">My Profile</string>

    <string name="create_board_title">Create Board</string>
    <string name="create">CREATE</string>
    <string name="board_name">Board Name</string>

    <string name="no_boards_are_available">No Boards are available!!!</string>

    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>

    <string name="members">Members</string>
    <string name="delete_board">Delete Board</string>

    <string name="add_member">Add Member</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="search_name">Search Name</string>

    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>
    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>

    <string name="delete_card">Delete Card</string>

    <string name="alert">Alert</string>
    <string name="confirmation_message_to_delete_card">Are you sure you want to delete card \'%1$s\' ???</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="str_select_label_color">Select Label Color</string>

    <string name="str_select_member">Select Member</string>

    <string name="default_notification_channel_id">task_master_notification_channel_id</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>

    <string name="confirmation_message_to_delete_board">Are you sure you want to delete board \'%1$s\' ???</string>
    <string name="confirmation_message_to_delete_member">Are you sure you want to remove member \'%1$s\' ???</string>
    <string name="password_should_be_at_least_6_digit_number">* Password should be at least 6 digit number</string>
</resources>